--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Test" 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title> Colby's Schedule </title>
+    <base href="/">
+</head>
+
+<body>
+    <img src="schedule.png" alt = "ColbySchedule">
+</body>
