--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 </head>
 
 <body>
-    <img src="schedule.png" alt = "ColbySchedule">
+    <img src="schedule.png" alt="ColbySchedule" width="1500" height="630">
 </body>
