--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Colby's Schedule </title>
+    <title> Schedule </title>
     <base href="/">
 </head>
 
