--- a/index.html
+++ b/index.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>Schedule</title>
-    <base href="/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SLAM-R Packet Protector Lab</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        .banner {
+            background-color: #00B140;
+            padding: 0px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            margin: 0px;
+        }
+        .banner img {
+            height: 50px;
+            width: 60px;
+            margin-right: -70px;
+            margin-left: 10px;
+        }
+        .banner h1 {
+            margin: 0;
+            flex-grow: 1;
+            text-align: center;
+        }
+    
+        .container {
+            padding: 20px;
+        }
+        .links {
+            list-style: none;
+            padding: 0;
+        }
+        .links li {
+            margin: 10px 0;
+        }
+        .links a {
+            color: #FFD700;
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: bold;
+        }
+        .links p {
+            font-size: 16px;
+        }
+        .links a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
-
 <body>
-    <img src="schedule.png" alt="ColbySchedule" width="1500" height="630">
+    <div class="banner">
+        <img src="marshall_logo.png" alt="Marshall University Logo">
+        <h1>SLAM-R Packet Protector Lab</h1>
+    </div>
+    <div class="container">
+        <ul class="links">
+            <li><p>Group 1: <a href="https://192.168.216.52:9165/vnc.html?host=192.168.216.52&port=9165">https://192.168.216.52:9165/vnc.html?host=192.168.216.52&port=9165</a></p></li>
+            <li><p>Group 2: <a href="https://192.168.216.52:9185/vnc.html?host=192.168.216.52&port=9185">https://192.168.216.52:9185/vnc.html?host=192.168.216.52&port=9185</a></p></li>
+            <li><p>Group 3: <a href="https://192.168.216.52:9188/vnc.html?host=192.168.216.52&port=9188">https://192.168.216.52:9188/vnc.html?host=192.168.216.52&port=9188</a></p></li>
+            <li><p>Group 4: <a href="https://192.168.216.52:9193/vnc.html?host=192.168.216.52&port=9193">https://192.168.216.52:9193/vnc.html?host=192.168.216.52&port=9193</a></p></li>
+            <li><p>Group 5: <a href="https://192.168.216.52:9198/vnc.html?host=192.168.216.52&port=9198">https://192.168.216.52:9198/vnc.html?host=192.168.216.52&port=9198</a></p></li>
+            <li><p>Group 6: <a href="https://192.168.216.52:9166/vnc.html?host=192.168.216.52&port=9166">https://192.168.216.52:9166/vnc.html?host=192.168.216.52&port=9166</a></p></li>
+            <li><p>Group 7: <a href="https://192.168.216.52:9186/vnc.html?host=192.168.216.52&port=9186">https://192.168.216.52:9186/vnc.html?host=192.168.216.52&port=9186</a></p></li>
+            <li><p>Group 8: <a href="https://192.168.216.52:9189/vnc.html?host=192.168.216.52&port=9189">https://192.168.216.52:9189/vnc.html?host=192.168.216.52&port=9189</a></p></li>
+            <li><p>Group 9: <a href="https://192.168.216.52:9194/vnc.html?host=192.168.216.52&port=9194">https://192.168.216.52:9194/vnc.html?host=192.168.216.52&port=9194</a></p></li>
+            <li><p>Group 10: <a href="https://192.168.216.52:9167/vnc.html?host=192.168.216.52&port=9167">https://192.168.216.52:9167/vnc.html?host=192.168.216.52&port=9167</a></p></li>
+            <li><p>Group 11: <a href="https://192.168.216.52:9169/vnc.html?host=192.168.216.52&port=9169">https://192.168.216.52:9169/vnc.html?host=192.168.216.52&port=9169</a></p></li>
+            <li><p>Group 12: <a href="https://192.168.216.52:9191/vnc.html?host=192.168.216.52&port=9191">https://192.168.216.52:9191/vnc.html?host=192.168.216.52&port=9191</a></p></li>
+            <li><p>Group 13: <a href="https://192.168.216.52:9195/vnc.html?host=192.168.216.52&port=9195">https://192.168.216.52:9195/vnc.html?host=192.168.216.52&port=9195</a></p></li>
+            <li><p>Group 14: <a href="https://192.168.216.52:9208/vnc.html?host=192.168.216.52&port=9208">https://192.168.216.52:9208/vnc.html?host=192.168.216.52&port=9208</a></p></li>
+            <li><p>Group 15: <a href="https://192.168.216.52:9168/vnc.html?host=192.168.216.52&port=9168">https://192.168.216.52:9168/vnc.html?host=192.168.216.52&port=9168</a></p></li>
+            <li><p>Group 16: <a href="https://192.168.216.52:9184/vnc.html?host=192.168.216.52&port=9184">https://192.168.216.52:9184/vnc.html?host=192.168.216.52&port=9184</a></p></li>
+            <li><p>Group 17: <a href="https://192.168.216.52:9187/vnc.html?host=192.168.216.52&port=9187">https://192.168.216.52:9187/vnc.html?host=192.168.216.52&port=9187</a></p></li>
+            <li><p>Group 18: <a href="https://192.168.216.52:9190/vnc.html?host=192.168.216.52&port=9190">https://192.168.216.52:9190/vnc.html?host=192.168.216.52&port=9190</a></p></li>
+            <li><p>Group 19: <a href="https://192.168.216.52:9192/vnc.html?host=192.168.216.52&port=9192">https://192.168.216.52:9192/vnc.html?host=192.168.216.52&port=9192</a></p></li>
+            <li><p>Group 20: <a href="https://192.168.216.52:9196/vnc.html?host=192.168.216.52&port=9196">https://192.168.216.52:9196/vnc.html?host=192.168.216.52&port=9196</a></p></li>
+        </ul>
+    </div>
 </body>
+</html>
