--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
     </div>
     <div class="container">
         <ul class="links">
-            <li><p>Group 1: <a href="https://192.168.216.52:9165/vnc.html?host=192.168.216.52&port=9165">https://192.168.216.52:9165/vnc.html?host=192.168.216.52&port=9165</a></p></li>
-            <li><p>Group 2: <a href="https://192.168.216.52:9185/vnc.html?host=192.168.216.52&port=9185">https://192.168.216.52:9185/vnc.html?host=192.168.216.52&port=9185</a></p></li>
-            <li><p>Group 3: <a href="https://192.168.216.52:9188/vnc.html?host=192.168.216.52&port=9188">https://192.168.216.52:9188/vnc.html?host=192.168.216.52&port=9188</a></p></li>
-            <li><p>Group 4: <a href="https://192.168.216.52:9193/vnc.html?host=192.168.216.52&port=9193">https://192.168.216.52:9193/vnc.html?host=192.168.216.52&port=9193</a></p></li>
-            <li><p>Group 5: <a href="https://192.168.216.52:9198/vnc.html?host=192.168.216.52&port=9198">https://192.168.216.52:9198/vnc.html?host=192.168.216.52&port=9198</a></p></li>
-            <li><p>Group 6: <a href="https://192.168.216.52:9166/vnc.html?host=192.168.216.52&port=9166">https://192.168.216.52:9166/vnc.html?host=192.168.216.52&port=9166</a></p></li>
-            <li><p>Group 7: <a href="https://192.168.216.52:9186/vnc.html?host=192.168.216.52&port=9186">https://192.168.216.52:9186/vnc.html?host=192.168.216.52&port=9186</a></p></li>
-            <li><p>Group 8: <a href="https://192.168.216.52:9189/vnc.html?host=192.168.216.52&port=9189">https://192.168.216.52:9189/vnc.html?host=192.168.216.52&port=9189</a></p></li>
-            <li><p>Group 9: <a href="https://192.168.216.52:9194/vnc.html?host=192.168.216.52&port=9194">https://192.168.216.52:9194/vnc.html?host=192.168.216.52&port=9194</a></p></li>
-            <li><p>Group 10: <a href="https://192.168.216.52:9167/vnc.html?host=192.168.216.52&port=9167">https://192.168.216.52:9167/vnc.html?host=192.168.216.52&port=9167</a></p></li>
-            <li><p>Group 11: <a href="https://192.168.216.52:9169/vnc.html?host=192.168.216.52&port=9169">https://192.168.216.52:9169/vnc.html?host=192.168.216.52&port=9169</a></p></li>
-            <li><p>Group 12: <a href="https://192.168.216.52:9191/vnc.html?host=192.168.216.52&port=9191">https://192.168.216.52:9191/vnc.html?host=192.168.216.52&port=9191</a></p></li>
-            <li><p>Group 13: <a href="https://192.168.216.52:9195/vnc.html?host=192.168.216.52&port=9195">https://192.168.216.52:9195/vnc.html?host=192.168.216.52&port=9195</a></p></li>
-            <li><p>Group 14: <a href="https://192.168.216.52:9208/vnc.html?host=192.168.216.52&port=9208">https://192.168.216.52:9208/vnc.html?host=192.168.216.52&port=9208</a></p></li>
-            <li><p>Group 15: <a href="https://192.168.216.52:9168/vnc.html?host=192.168.216.52&port=9168">https://192.168.216.52:9168/vnc.html?host=192.168.216.52&port=9168</a></p></li>
-            <li><p>Group 16: <a href="https://192.168.216.52:9184/vnc.html?host=192.168.216.52&port=9184">https://192.168.216.52:9184/vnc.html?host=192.168.216.52&port=9184</a></p></li>
-            <li><p>Group 17: <a href="https://192.168.216.52:9187/vnc.html?host=192.168.216.52&port=9187">https://192.168.216.52:9187/vnc.html?host=192.168.216.52&port=9187</a></p></li>
-            <li><p>Group 18: <a href="https://192.168.216.52:9190/vnc.html?host=192.168.216.52&port=9190">https://192.168.216.52:9190/vnc.html?host=192.168.216.52&port=9190</a></p></li>
-            <li><p>Group 19: <a href="https://192.168.216.52:9192/vnc.html?host=192.168.216.52&port=9192">https://192.168.216.52:9192/vnc.html?host=192.168.216.52&port=9192</a></p></li>
-            <li><p>Group 20: <a href="https://192.168.216.52:9196/vnc.html?host=192.168.216.52&port=9196">https://192.168.216.52:9196/vnc.html?host=192.168.216.52&port=9196</a></p></li>
+            <li><p>Station 1: <a href="https://192.168.216.52:9165/vnc.html?host=192.168.216.52&port=9165">https://192.168.216.52:9165/vnc.html?host=192.168.216.52&port=9165</a></p></li>
+            <li><p>Station 2: <a href="https://192.168.216.52:9185/vnc.html?host=192.168.216.52&port=9185">https://192.168.216.52:9185/vnc.html?host=192.168.216.52&port=9185</a></p></li>
+            <li><p>Station 3: <a href="https://192.168.216.52:9188/vnc.html?host=192.168.216.52&port=9188">https://192.168.216.52:9188/vnc.html?host=192.168.216.52&port=9188</a></p></li>
+            <li><p>Station 4: <a href="https://192.168.216.52:9193/vnc.html?host=192.168.216.52&port=9193">https://192.168.216.52:9193/vnc.html?host=192.168.216.52&port=9193</a></p></li>
+            <li><p>Station 5: <a href="https://192.168.216.52:9198/vnc.html?host=192.168.216.52&port=9198">https://192.168.216.52:9198/vnc.html?host=192.168.216.52&port=9198</a></p></li>
+            <li><p>Station 6: <a href="https://192.168.216.52:9166/vnc.html?host=192.168.216.52&port=9166">https://192.168.216.52:9166/vnc.html?host=192.168.216.52&port=9166</a></p></li>
+            <li><p>Station 7: <a href="https://192.168.216.52:9186/vnc.html?host=192.168.216.52&port=9186">https://192.168.216.52:9186/vnc.html?host=192.168.216.52&port=9186</a></p></li>
+            <li><p>Station 8: <a href="https://192.168.216.52:9189/vnc.html?host=192.168.216.52&port=9189">https://192.168.216.52:9189/vnc.html?host=192.168.216.52&port=9189</a></p></li>
+            <li><p>Station 9: <a href="https://192.168.216.52:9194/vnc.html?host=192.168.216.52&port=9194">https://192.168.216.52:9194/vnc.html?host=192.168.216.52&port=9194</a></p></li>
+            <li><p>Station 10: <a href="https://192.168.216.52:9167/vnc.html?host=192.168.216.52&port=9167">https://192.168.216.52:9167/vnc.html?host=192.168.216.52&port=9167</a></p></li>
+            <li><p>Station 11: <a href="https://192.168.216.52:9169/vnc.html?host=192.168.216.52&port=9169">https://192.168.216.52:9169/vnc.html?host=192.168.216.52&port=9169</a></p></li>
+            <li><p>Station 12: <a href="https://192.168.216.52:9191/vnc.html?host=192.168.216.52&port=9191">https://192.168.216.52:9191/vnc.html?host=192.168.216.52&port=9191</a></p></li>
+            <li><p>Station 13: <a href="https://192.168.216.52:9195/vnc.html?host=192.168.216.52&port=9195">https://192.168.216.52:9195/vnc.html?host=192.168.216.52&port=9195</a></p></li>
+            <li><p>Station 14: <a href="https://192.168.216.52:9208/vnc.html?host=192.168.216.52&port=9208">https://192.168.216.52:9208/vnc.html?host=192.168.216.52&port=9208</a></p></li>
+            <li><p>Station 15: <a href="https://192.168.216.52:9168/vnc.html?host=192.168.216.52&port=9168">https://192.168.216.52:9168/vnc.html?host=192.168.216.52&port=9168</a></p></li>
+            <li><p>Station 16: <a href="https://192.168.216.52:9184/vnc.html?host=192.168.216.52&port=9184">https://192.168.216.52:9184/vnc.html?host=192.168.216.52&port=9184</a></p></li>
+            <li><p>Station 17: <a href="https://192.168.216.52:9187/vnc.html?host=192.168.216.52&port=9187">https://192.168.216.52:9187/vnc.html?host=192.168.216.52&port=9187</a></p></li>
+            <li><p>Station 18: <a href="https://192.168.216.52:9190/vnc.html?host=192.168.216.52&port=9190">https://192.168.216.52:9190/vnc.html?host=192.168.216.52&port=9190</a></p></li>
+            <li><p>Station 19: <a href="https://192.168.216.52:9192/vnc.html?host=192.168.216.52&port=9192">https://192.168.216.52:9192/vnc.html?host=192.168.216.52&port=9192</a></p></li>
+            <li><p>Station 20: <a href="https://192.168.216.52:9196/vnc.html?host=192.168.216.52&port=9196">https://192.168.216.52:9196/vnc.html?host=192.168.216.52&port=9196</a></p></li>
         </ul>
     </div>
 </body>
